--- a/Readme
+++ b/Readme
@@ -1,1 +1,16 @@
-#H1
+# Precision Farming App
+## Date : 20/09/2021
+
+# Team: 
+    1. Arjun Panicker
+    2. Clariza Look
+    3. Deepakraj Sugumaran
+    4. Harper Wu
+    5. Kiet Hoang
+
+## Project Sub-Team:
+    A. Python Companion App - [ Arjun Panicker , Deepakraj]
+    B. Python Websever  - [Clariza Look, Harper Wu, Kiet Hoang]
+
+# Python Companion App
+    
